src/objects/Casier_Site__c.object
<CustomObject>
    <fields>
        <fullName>Coef_Ajustement__c</fullName>
        <label>Coef Ajustement</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Configuration Site</label>
        <referenceTo>Configuration_Site__c</referenceTo>
        <relationshipLabel>Casier Site</relationshipLabel>
        <relationshipName>Casier_Site</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modele__c</fullName>
        <label>Modèle</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_MDL</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moyenne__c</fullName>
        <label>Moyenne</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seuil_calcule__c</fullName>
        <description>Nombre disponible de casiers par type.</description>
        <label>Seuil calculé</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seuil_contractuel__c</fullName>
        <description>Nombre contractuel de casiers par type.</description>
        <label>Seuil contractuel</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Casier Site</label>
    <nameField>
        <label>Nom de Casier Site</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Casier Site</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>